// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> suite renders correctly HTML tree 1`] = `
<div>
  Backend/Frontend Node, React, Typescript boilerplate
</div>
`;

exports[`<Header /> suite renders correctly components tree 1`] = `
<Header>
  <div>
    Backend/Frontend Node, React, Typescript boilerplate
  </div>
</Header>
`;

exports[`<Header /> suite renders correctly isolated component 1`] = `
<div>
  Backend/Frontend Node, React, Typescript boilerplate
</div>
`;
